# ml_footbal_api_v1

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: .env  main.py
src/alembic/: env.py
src/alembic/versions/: 2025_06_30_1811-382ebf9ed40a_create_new_table_v1.py  2025_06_30_1817-35a8fe3e84f1_create_new_table_v2.py
src/crud/: basedao.py
src/database/: __init__.py  base.py  db_helper.py
src/football/: fb_dao.py  models.py  router.py  schemas.py
src/ml_core/: ml_models.py
src/settings/: config.py
