[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.13"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
alembic = "^1.16.2"
uvicorn = "^0.34.3"
joblib = "^1.5.1"
pandas = "^2.3.0"
scikit-learn = "^1.7.0"
greenlet = "^3.2.3"
